[package]
name = "ionic-inventories"
version = "0.1.0"
edition = "2024"

[dependencies]

ionic-codec = { workspace = true }
bevy_ecs = { workspace = true }
tokio = { workspace = true }
crossbeam-queue = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
ionic-registry = { workspace = true }
ionic-world = { workspace = true }
bitcode = { workspace = true }
bitcode_derive = { workspace = true }
ionic-data = { workspace = true }
ionic-core = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
