[package]
name = "ionic-resources"
edition.workspace = true
version.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
ionic-performance = { workspace = true }
ionic-net-runtime = { workspace = true }
crossbeam-channel = { workspace = true }
ionic-state = { workspace = true }
ionic-config = { workspace = true }

[lints]
workspace = true
