[package]
name = "ionic-net-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
ionic-protocol = { workspace = true }
ionic-codec = { workspace = true }
thiserror = { workspace = true }
bevy_ecs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
yazi = { workspace = true }
ionic-config = { workspace = true }
ionic-core = { workspace = true }
ionic-macros = { workspace = true }
ionic-encryption = { path = "../encryption" }
ionic-state = { workspace = true }
ionic-world = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
ionic-components = { workspace = true }
rand = { workspace = true }
ionic-commands = { workspace = true }
reqwest = { workspace = true }
crossbeam-channel = { workspace = true }
ionic-text = { workspace = true }