[package]
name = "background"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true }
bevy_math = { workspace = true }
ionic-core = { workspace = true }
ionic-net-runtime = { workspace = true }
ionic-protocol = { workspace = true }
ionic-components = { workspace = true }
ionic-state = { workspace = true }
ionic-config = { workspace = true }
ionic-codec = { workspace = true }
ionic-world = { workspace = true }
tracing = { workspace = true }
ionic-text = { workspace = true }
ionic-messages = { workspace = true }
ionic-inventories = { workspace = true }
ionic-resources = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
ionic-entities = { workspace = true }
ionic-commands = { workspace = true }