[package]
name = "packets"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true }
ionic-core = { workspace = true }
ionic-components = { workspace = true }
ionic-protocol = { workspace = true }
tracing = { workspace = true }
ionic-messages = { workspace = true }
ionic-text = { workspace = true }
ionic-state = { workspace = true }
ionic-inventories = { workspace = true }
ionic-commands = { workspace = true }
ionic-net-runtime = { workspace = true }
ionic-codec = { workspace = true }
ionic-config = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
ionic-macros = { workspace = true }