[package]
name = "physics"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true }
ionic-components = { workspace = true }
bevy_math = { workspace = true }
ionic-core = { workspace = true }
ionic-state = { workspace = true }
ionic-entities = { workspace = true }
ionic-world = { workspace = true }
ionic-macros = { workspace = true }
ionic-messages = { workspace = true }
ionic-physics = { workspace = true }
tracing = { workspace = true }