[package]
name = "player"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true }
crossbeam-channel = { workspace = true }
ionic-components = { workspace = true }
ionic-config = { workspace = true }
ionic-inventories = { workspace = true }
ionic-state = { workspace = true }
ionic-resources = { workspace = true }
tracing = { workspace = true }
ionic-net-runtime = { workspace = true }
ionic-messages = { workspace = true }
bevy_math = { workspace = true }
ionic-core = { workspace = true }
ionic-data = { workspace = true }
ionic-codec = { workspace = true }
ionic-protocol = { workspace = true }
ionic-registry = { workspace = true }
ionic-entities = { workspace = true }
ionic-text = { workspace = true }
ionic-macros = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }